[package]
name = "construct-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
construct-core = { path = "../construct-core", features = ["desktop", "post-quantum"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
futures = "0.3"

